# OCR-Transformer

./: .gitignore  README.md  build_viz.bat  exe.py  goldset.json  main.py  preprocess.py  preprocess_data.py  setup.py  test_setup.py  verify_data.py
ottoman-corrector/: docker-compose.yml
pack/data/: goldsentence.json
pack/ota/: ay_ahmet_hasim.conllu  bedbaht_vicdanım_raif_necdet.conllu  bir_kadinin_hikayesi.conllu  nutuk.conllu  ota_boun-ud-test.conllu  ota_boun-ud-train.conllu  parallel_lines.xlsx
src/: noise_generator.py  test_imports.py  test_preprocessing.py
src/models/: __init__.py  dataset.py  loss.py  ottoman_transformer.py  transformer.py
src/preprocessor/: data_cleaner.py
src/utils/: data_handler.py  error_handler.py  memory_utils.py  progress.py
src/visualization/: __init__.py  confusion_viz.py  error_viz.py  model_viz.py  qt_viz.py  stats_viz.py  training_viz.py
src/visualization/cpp/: .clangd  CMakeLists.txt  setup_imgui.py  test_viz.py  training_viz.cpp  viz_engine.cpp
src/visualization/cpp/Release/: viz_engine.exp  viz_engine.lib
src/visualization/cpp/imgui_impl/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
src/visualization/rust_viz/: Cargo.toml  test_viz.py
src/visualization/rust_viz/src/: lib.rs
